# stalcraft-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
docs/: Makefile
docs/source/: _links.rst  conf.py  index.rst  issues.rst
docs/source/api/: index.rst  modules.rst  scapi.client.auction.rst  scapi.client.clan.rst  scapi.client.rst  scapi.database.rst  scapi.http.auth.rst  scapi.http.rst  scapi.oauth.rst
docs/source/examples/: clients.rst  common.rst  index.rst  integration.rst  oauth.rst
docs/source/guides/: client.rst  database.rst  errors.rst  index.rst  oauth.rst
docs/source/issues/: auth.rst  database.rst  index.rst  oauth.rst
docs/source/lib/: scapi.client.auction.rst  scapi.client.clan.rst  scapi.client.rst  scapi.database.index.rst  scapi.database.rst  scapi.http.auth.rst  scapi.http.rst  scapi.oauth.rst  scapi.rst
docs/source/v/: 2.0.0.rst  2.1.0.rst  index.rst
examples/: app_client.py  item_id.py  rate_limit.py  user_client.py
examples/asyncio/: app_client.py  item_id.py  user_client.py
scapi/: __init__.py  config.py  consts.py  defaults.py  enums.py  exceptions.py
scapi/client/: __init__.py  app.py  base.py  models.py  shared.py  types.py  user.py
scapi/client/auction/: __init__.py  base.py  shared.py
scapi/client/clan/: __init__.py  app.py  shared.py  user.py
scapi/database/: __init__.py  database.py  enums.py  github.py  index.py  lookup.py  metadata.py  models.py  parsing.py  repository.py  schema.py  state.py  tokenize.py  version.py
scapi/database/index/: __init__.py  parsing.py  search.py  tokenize.py
scapi/http/: __init__.py  api.py  base.py  client.py  params.py  ratelimit.py  types.py
scapi/http/auth/: __init__.py  creds.py  token.py
scapi/items/: convert.py  database.py  download.py  enums.py  github.py  models.py  parsing.py  repository.py  version.py
scapi/items/parsing/: __init__.py  base.py  parsers.py
scapi/models/: __init__.py  api.py  oauth.py
scapi/oauth/: __init__.py  app.py  base.py  client.py  models.py  user.py
stalcraft/: __init__.py  api.py  auction.py  auth.py  clan.py  client.py  consts.py  default.py  defaults.py  enums.py  exceptions.py  item.py  items.json  schemas.py
stalcraft/api/: __init__.py  base.py  secret.py  token.py
stalcraft/asyncio/: __init__.py
stalcraft/asyncio/api/: __init__.py  base.py  secret.py  token.py
stalcraft/asyncio/auction/: __init__.py  auction.py
stalcraft/asyncio/auth/: __init__.py  app.py  base.py  user.py
stalcraft/asyncio/clan/: __init__.py  clan.py  user.py
stalcraft/asyncio/client/: __init__.py  app.py  base.py  user.py
stalcraft/auction/: __init__.py  auction.py
stalcraft/auth/: __init__.py  app.py  base.py  user.py
stalcraft/clan/: __init__.py  clan.py  user.py
stalcraft/client/: __init__.py  app.py  base.py  user.py
stalcraft/data/global/: listing.json
stalcraft/data/ru/: listing.json
stalcraft/items/: __init__.py  base.py  local.py  web.py
stalcraft/schemas/: __init__.py  api.py  auth.py  ratelimit.py
stalcraft/utils/: __init__.py  listing.py  method.py  params.py
tests/: conftest.py  test_client.py  test_database.py  test_github.py  test_http.py  test_index.py  test_oauth.py  test_repr.py
tests/mocks/handlers/: __init__.py  auction_history.py  auction_lots.py  characters.py  clan_info.py  clan_members.py  clans.py  emission.py  friends.py  operations.py  profile.py  (+1 more)
(+2 files in other folders)
