[project]
name = "stalcraft-api"
description = "stalcraft api unofficial python library"
authors = [{ name = "onejeuu", email = "mail@66rk.ru" }]

license = "MIT"

requires-python = ">=3.11"

readme = "README.md"

dynamic = ["version"]

dependencies = [
    "pydantic>=2.12.0",
    "aiohttp>=3.13.0",
    "strenum>=0.4.15",
    "aiosqlite>=0.21.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = ["rich>=14.2.0", "pytest>=9.0.0", "pytest-asyncio>=1.3.0"]

[project.urls]
Repository = "https://github.com/onejeuu/stalcraft-api"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["scapi", "scapi.*"] } }

[tool.setuptools.dynamic]
version = { attr = "scapi.__version__" }

