[project]
name = "stalcraft-api"
description = "stalcraft api unofficial python library"
authors = [{ name = "onejeuu", email = "mail@66rk.ru" }]

license = "MIT"

requires-python = ">=3.11"

readme = "README.md"

dynamic = ["version"]

dependencies = [
    "aiohttp>=3.13.0",
    "aiofiles>=25.1.0",
    "pydantic>=2.12.5",
    "strenum>=0.4.15",
    "cachetools>=6.2.2",
]

[dependency-groups]
dev = ["rich>=14.2.0", "pytest>=9.0.0", "pytest-asyncio>=1.3.0"]

docs = [
    "sphinx>=8.2.3,<9.0.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-book-theme>=1.1.4",
    "sphinx-intl>=2.3.2",
]

[project.urls]
Repository = "https://github.com/onejeuu/stalcraft-api"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["scapi", "scapi.*"] } }

[tool.setuptools.dynamic]
version = { attr = "scapi.__version__" }

[tool.isort]
lines_after_imports = 2
skip = ["__init__.py"]
