[project]
name = "stalcraft-api"
description = "stalcraft api unofficial python library"
authors = [{ name = "onejeuu", email = "mail@66rk.ru" }]

license = "MIT"

requires-python = ">=3.11"

readme = "README.md"

dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "aiohttp>=3.13.0,<4.0.0",
    "aiofiles>=25.1.0,<26.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "strenum>=0.4.0,<1.0.0",
    "cachetools>=6.2.0,<7.0.0",
]

[dependency-groups]
dev = [
    "rich>=14.2.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-aiohttp>=1.1.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
]

docs = [
    "sphinx>=8.2.3,<9.0.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-book-theme>=1.1.4",
    "sphinx-intl>=2.3.2",
]

[project.urls]
Homepage = "https://github.com/onejeuu/stalcraft-api"
Repository = "https://github.com/onejeuu/stalcraft-api"
Documentation = "https://sc-api.readthedocs.io"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["scapi", "scapi.*"] } }

[tool.setuptools.dynamic]
version = { attr = "scapi.__version__" }

[tool.isort]
lines_after_imports = 2
skip = ["__init__.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
